--- a/web/src/styles/styles.css
+++ b/web/src/styles/styles.css
@@ -74,6 +74,7 @@
     body {
         /* @apply bg-background text-foreground; */
         @apply bg-slate-50 text-foreground dark:bg-neutral-950 dark:text-white;
+        overscroll-behavior: none;
     }
 }
 
